third_party/rust/paste/tests/ui/unexpected-punct.stderr
error: unexpected punct
 --> $DIR/unexpected-punct.rs:2:12
  |
2 |     fn [<a + b>]() {}
  |            ^
